# razer_keyboard_mode_changer

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: clippy.yml  commitlint.yml  release-please.yml
src/: main.rs  scheduler.rs  task.xml
