[package]
name = "razer_keyboard_mode_changer"
description = "Enable macro keys as F13-F17 on some razer keyboards"
version = "0.2.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
razer_driver_rs = "0.1.0"
anyhow = "1.0"
tempfile = "3.3.0"

[profile.release]
lto = true
codegen-units = 1
